Fixed banner stretch issue.

--- a/themes/spiffily.css
+++ b/themes/spiffily.css
@@ -44,7 +44,7 @@
     --toolbar-color: #666666DD;
     --toolbar-font-color: white;
     --foreground-color: black;
-    --foreground-header-color: grey;
+    --foreground-header-color: lightgrey;
     --button-color: #567859;
     --accent-color: #50684D;
 
@@ -77,7 +77,7 @@
 }
 
 .banner{
-  background-color: var(--primary-color);
+  background-color: var(--accent-color);
   background-attachment: fixed;
   background-position: top center;
   background-repeat: no-repeat;
